src/ciaaw_saw.f90

module ciaaw__saw
!! Standard Atomic Weights - autogenerated.
use iso_fortran_env
use iso_c_binding
use ieee_arithmetic
implicit none
private

integer(int64), parameter :: x = 1
real(real64), parameter :: nan = transfer(huge(x), 1.0d0)

type, public :: element_t
!! Object representing an element.
character(len=24) :: element !! Element name
character(len=8) :: symbol !! Element symbol
integer(int32) :: z !! Element atomic number
real(real64) :: saw_min !! Min standard atomic weight
real(real64) :: saw_max !! Max standard atomic weight
real(real64) :: saw !! Value standard atomic weight
real(real64) :: saw_u !! Uncertainty standard atomic weight
real(real64) :: asaw !! Abridged value standard atomic weight
real(real64) :: asaw_u !! Abridged uncertainty standard atomic weight
end type

type, public, bind(C) :: capi_element_t
!! Object representing an element.
character(kind=c_char) :: element(25) !! Element name
character(kind=c_char) :: symbol(9) !! Element symbol
integer(c_int) :: z !! Element atomic number
real(c_double) :: saw_min !! Min standard atomic weight
real(c_double) :: saw_max !! Max standard atomic weight
real(c_double) :: saw !! Value standard atomic weight
real(c_double) :: saw_u !! Uncertainty standard atomic weight
real(c_double) :: asaw !! Abridged value standard atomic weight
real(c_double) :: asaw_u !! Abridged uncertainty standard atomic weight
end type

integer(int32), parameter, public :: YEAR = 2021
integer(c_int), protected, public, bind(C, name="ciaaw_saw_YEAR") :: capi_YEAR = YEAR

type(element_t), parameter, public :: H =&
element_t("hydrogen", "H", 1, 1.00784d0, 1.00811d0, 1.00798d0, 0.00008d0, 1.0080d0, 0.0002d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_H") :: capi_H =&
capi_element_t(&
["h","y","d","r","o","g","e","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["H",c_null_char, " "," "," "," "," "," "," "], &
H%z, &
H%saw_max, H%saw_min, H%saw, H%saw_u, H%asaw, H%asaw_u)

type(element_t), parameter, public :: He =&
element_t("helium", "He", 2, nan, nan, 4.002602d0, 0.000002d0, 4.0026d0, 0.0001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_He") :: capi_He =&
capi_element_t(&
["h","e","l","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["H","e",c_null_char, " "," "," "," "," "," "], &
He%z, &
He%saw_max, He%saw_min, He%saw, He%saw_u, He%asaw, He%asaw_u)

type(element_t), parameter, public :: Li =&
element_t("lithium", "Li", 3, 6.938d0, 6.997d0, 6.97d0, 0.02d0, 6.94d0, 0.06d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Li") :: capi_Li =&
capi_element_t(&
["l","i","t","h","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["L","i",c_null_char, " "," "," "," "," "," "], &
Li%z, &
Li%saw_max, Li%saw_min, Li%saw, Li%saw_u, Li%asaw, Li%asaw_u)

type(element_t), parameter, public :: Be =&
element_t("beryllium", "Be", 4, nan, nan, 9.0121831d0, 0.0000005d0, 9.0122d0, 0.00001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Be") :: capi_Be =&
capi_element_t(&
["b","e","r","y","l","l","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B","e",c_null_char, " "," "," "," "," "," "], &
Be%z, &
Be%saw_max, Be%saw_min, Be%saw, Be%saw_u, Be%asaw, Be%asaw_u)

type(element_t), parameter, public :: B =&
element_t("boron", "B", 5, 10.806d0, 10.821d0, 10.813d0, 0.005d0, 10.81d0, 0.02d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_B") :: capi_B =&
capi_element_t(&
["b","o","r","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B",c_null_char, " "," "," "," "," "," "," "], &
B%z, &
B%saw_max, B%saw_min, B%saw, B%saw_u, B%asaw, B%asaw_u)

type(element_t), parameter, public :: C =&
element_t("carbon", "C", 6, 12.0096d0, 12.0116d0, 12.0106d0, 0.0006d0, 12.011d0, 0.002d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_C") :: capi_C =&
capi_element_t(&
["c","a","r","b","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C",c_null_char, " "," "," "," "," "," "," "], &
C%z, &
C%saw_max, C%saw_min, C%saw, C%saw_u, C%asaw, C%asaw_u)

type(element_t), parameter, public :: N =&
element_t("nitrogen", "N", 7, 14.00643d0, 14.00728d0, 14.0069d0, 0.0003d0, 14.007d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_N") :: capi_N =&
capi_element_t(&
["n","i","t","r","o","g","e","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N",c_null_char, " "," "," "," "," "," "," "], &
N%z, &
N%saw_max, N%saw_min, N%saw, N%saw_u, N%asaw, N%asaw_u)

type(element_t), parameter, public :: O =&
element_t("oxygen", "O", 8, 15.99903d0, 15.99977d0, 15.9994d0, 0.0003d0, 15.999d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_O") :: capi_O =&
capi_element_t(&
["o","x","y","g","e","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["O",c_null_char, " "," "," "," "," "," "," "], &
O%z, &
O%saw_max, O%saw_min, O%saw, O%saw_u, O%asaw, O%asaw_u)

type(element_t), parameter, public :: F =&
element_t("fluorine", "F", 9, nan, nan, 18.998403162d0, 0.000000005d0, 18.998d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_F") :: capi_F =&
capi_element_t(&
["f","l","u","o","r","i","n","e",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["F",c_null_char, " "," "," "," "," "," "," "], &
F%z, &
F%saw_max, F%saw_min, F%saw, F%saw_u, F%asaw, F%asaw_u)

type(element_t), parameter, public :: Ne =&
element_t("neon", "Ne", 10, nan, nan, 20.1797d0, 0.0006d0, 20.180d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Ne") :: capi_Ne =&
capi_element_t(&
["n","e","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","e",c_null_char, " "," "," "," "," "," "], &
Ne%z, &
Ne%saw_max, Ne%saw_min, Ne%saw, Ne%saw_u, Ne%asaw, Ne%asaw_u)

type(element_t), parameter, public :: Na =&
element_t("sodium", "Na", 11, nan, nan, 22.98976928d0, 0.00000002d0, 22.990d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Na") :: capi_Na =&
capi_element_t(&
["s","o","d","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","a",c_null_char, " "," "," "," "," "," "], &
Na%z, &
Na%saw_max, Na%saw_min, Na%saw, Na%saw_u, Na%asaw, Na%asaw_u)

type(element_t), parameter, public :: Mg =&
element_t("magnesium", "Mg", 12, 24.304d0, 24.307d0, 24.3055d0, 0.0009d0, 24.305d0, 0.002d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Mg") :: capi_Mg =&
capi_element_t(&
["m","a","g","n","e","s","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["M","g",c_null_char, " "," "," "," "," "," "], &
Mg%z, &
Mg%saw_max, Mg%saw_min, Mg%saw, Mg%saw_u, Mg%asaw, Mg%asaw_u)

type(element_t), parameter, public :: Al =&
element_t("aluminium", "Al", 13, nan, nan, 26.9815384d0, 0.0000003d0, 26.982d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Al") :: capi_Al =&
capi_element_t(&
["a","l","u","m","i","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","l",c_null_char, " "," "," "," "," "," "], &
Al%z, &
Al%saw_max, Al%saw_min, Al%saw, Al%saw_u, Al%asaw, Al%asaw_u)

type(element_t), parameter, public :: Si =&
element_t("silicon", "Si", 14, 28.084d0, 28.086d0, 28.0850d0, 0.0006d0, 28.085d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Si") :: capi_Si =&
capi_element_t(&
["s","i","l","i","c","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","i",c_null_char, " "," "," "," "," "," "], &
Si%z, &
Si%saw_max, Si%saw_min, Si%saw, Si%saw_u, Si%asaw, Si%asaw_u)

type(element_t), parameter, public :: P =&
element_t("phosphorous", "P", 15, nan, nan, 30.973761998d0, 0.000000005d0, 30.974d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_P") :: capi_P =&
capi_element_t(&
["p","h","o","s","p","h","o","r","o","u","s",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "], &
["P",c_null_char, " "," "," "," "," "," "," "], &
P%z, &
P%saw_max, P%saw_min, P%saw, P%saw_u, P%asaw, P%asaw_u)

type(element_t), parameter, public :: S =&
element_t("sulfur", "S", 16, 32.059d0, 32.076d0, 32.067d0, 0.005d0, 32.06d0, 0.02d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_S") :: capi_S =&
capi_element_t(&
["s","u","l","f","u","r",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S",c_null_char, " "," "," "," "," "," "," "], &
S%z, &
S%saw_max, S%saw_min, S%saw, S%saw_u, S%asaw, S%asaw_u)

type(element_t), parameter, public :: Cl =&
element_t("chlorine", "Cl", 17, 35.446d0, 35.457d0, 35.451d0, 0.004d0, 35.45d0, 0.01d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Cl") :: capi_Cl =&
capi_element_t(&
["c","h","l","o","r","i","n","e",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","l",c_null_char, " "," "," "," "," "," "], &
Cl%z, &
Cl%saw_max, Cl%saw_min, Cl%saw, Cl%saw_u, Cl%asaw, Cl%asaw_u)

type(element_t), parameter, public :: Ar =&
element_t("argon", "Ar", 18, 39.792d0, 39.963d0, 39.88d0, 0.05d0, 39.95d0, 0.16d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Ar") :: capi_Ar =&
capi_element_t(&
["a","r","g","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","r",c_null_char, " "," "," "," "," "," "], &
Ar%z, &
Ar%saw_max, Ar%saw_min, Ar%saw, Ar%saw_u, Ar%asaw, Ar%asaw_u)

type(element_t), parameter, public :: K =&
element_t("potassium", "K", 19, nan, nan, 39.0983d0, 0.0001d0, 39.098d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_K") :: capi_K =&
capi_element_t(&
["p","o","t","a","s","s","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["K",c_null_char, " "," "," "," "," "," "," "], &
K%z, &
K%saw_max, K%saw_min, K%saw, K%saw_u, K%asaw, K%asaw_u)

type(element_t), parameter, public :: Ca =&
element_t("calcium", "Ca", 20, nan, nan, 40.078d0, 0.004d0, 40.078d0, 0.004d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Ca") :: capi_Ca =&
capi_element_t(&
["c","a","l","c","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","a",c_null_char, " "," "," "," "," "," "], &
Ca%z, &
Ca%saw_max, Ca%saw_min, Ca%saw, Ca%saw_u, Ca%asaw, Ca%asaw_u)

type(element_t), parameter, public :: Sc =&
element_t("scandium", "Sc", 21, nan, nan, 44.955907d0, 0.000004d0, 44.956d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Sc") :: capi_Sc =&
capi_element_t(&
["s","c","a","n","d","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","c",c_null_char, " "," "," "," "," "," "], &
Sc%z, &
Sc%saw_max, Sc%saw_min, Sc%saw, Sc%saw_u, Sc%asaw, Sc%asaw_u)

type(element_t), parameter, public :: Ti =&
element_t("titanium", "Ti", 22, nan, nan, 47.867d0, 0.001d0, 47.867d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Ti") :: capi_Ti =&
capi_element_t(&
["t","i","t","a","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","i",c_null_char, " "," "," "," "," "," "], &
Ti%z, &
Ti%saw_max, Ti%saw_min, Ti%saw, Ti%saw_u, Ti%asaw, Ti%asaw_u)
